aqui nois tem cetz
isa te amo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="grid">
                 <div class="texto-left">
                     <h1>Hidratado™</h1>
-                    <p>Baixe nosso app e seja sempre lembrado de tomar água.</p>
+                    <p>certeza</p>
                     <input type="button" class="cta" value="Baixe agora"></input>
                 </div>
 
