--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="grid">
                 <div class="texto-left">
                     <h1>Hidratado™</h1>
-                    <p>certeza</p>
+                    <p>certeza absoluta</p>
                     <input type="button" class="cta" value="Baixe agora"></input>
                 </div>
 
