--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="section">
             <div class="grid">
                 <div class="texto-left">
-                    <h1>Hidratado™</h1>
+                    <h1 id="first-text">Hidratado™</h1>
                     <p>certeza absoluta</p>
                     <input type="button" class="cta" value="Baixe agora"></input>
                 </div>
