--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <div class="texto-left">
                     <h1>Hidratado™</h1>
                     <p>certeza absoluta</p>
-                    <input type="button" class="cta" value="Baixe agora"></input>
+                    <a href=""><img src="images/google-play.png" class="btn"></a>
+                    <a href=""><img src="images/app-store.png" class="btn"></a>
                 </div>
 
                 <div class="imagem">
