--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <div class="imagem">
-                    <img src="images/celular3.png">
+                    <img  id="celular1" src="images/celular3.png">
                 </div>
             </div>
         </div>
