--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
@@ -15,14 +16,16 @@
         <div class="section">
             <div class="grid">
                 <div class="texto-left">
-                    <h1 id="first-text">Hidratado™</h1>
-                    <p>certeza absoluta</p>
-                    <a href=""><img src="images/google-play.png" class="btn"></a>
-                    <a href=""><img src="images/app-store.png" class="btn"></a>
+                    <h1 id="first-text">HIDRATADO</h1>
+                    <p>Você sabe por que a água é fundamental para nossa saúde?</p>
+                    <div class="buttons">
+                        <a href=""><img src="images/google-play.png" class="btn"></a>
+                        <a href=""><img src="images/app-store.png" class="btn"></a>
+                    </div>
                 </div>
 
                 <div class="imagem">
-                    <img  id="celular1" src="images/celular3.png">
+                    <img id="celular1" src="images/celular3.png">
                 </div>
             </div>
         </div>
@@ -34,10 +37,10 @@
                 </div>
 
                 <div class="texto-right">
-                    <h1>Quando chega no corpo</h1>
-                    <p>Na digestão, a água faz parte da composição dos sucos digestivos e da saliva, que são fundamentais para
-                        a quebra do alimento. Ela também atua como solvente nas reações químicas e elimina substâncias tóxicas
-                        até chegar no intestino delgado.</p>
+                    <h1>NA DIGESTÃO</h1>
+                    <p>A água faz parte da composição dos sucos digestivos e da saliva, que são fundamentais para a quebra do
+                        alimento. Ela também atua como solvente nas reações químicas e elimina substâncias tóxicas até chegar
+                        no intestino delgado.</p>
                 </div>
             </div>
         </div>
@@ -46,10 +49,9 @@
             <div class="grid">
                 <div class="texto-left">
                     <h1>NO SANGUE</h1>
-                    <p>Após ser absorvido pelo intestino delgado, a água se torna um importante componente do plasma sanguíneo
-                        e fica responsável pelo transporte de nutrientes, oxigênio e sais minerais para as células. Por estar
-                        no sistema sanguíneo neste momento, a água percorre diversos orgãos do nosso corpo como fígado, coração
-                        e pulmão.</p>
+                    <p>Após ser absorvida pelo intestino delgado, a água passa a fazer parte do plasma sanguíneo, que é responsável
+                        pelo transporte de nutrientes, oxigênio e sais minerais para as células. Por estar no sistema sanguíneo,
+                        a água percorre diversos orgãos do nosso corpo como fígado, coração e pulmão.</p>
                 </div>
 
                 <div class="imagem">
@@ -77,9 +79,9 @@
             <div class="grid">
                 <div class="texto-left">
                     <h1>CAMINHO FINAL</h1>
-                    <p>Na bexiga sobra apenas o que nosso corpo não precisa. Através de um sinal nervoso, liberamos todas as
-                        substâncias que estão em excesso ou que não possuem função no nosso organismo através da urina. por
-                        isso é fundamental sempre ingeri-la para que haja um balanço entre o que é ingerido e o que se perde.</p>
+                    <p>Na bexiga sobra apenas o que nosso corpo não precisa. Através da urina, liberamos todas as substâncias
+                        que em excesso ou que não possuem função no nosso organismo. Por isso é fundamental ingerir água
+                        para que haja um balanço entre o que é ingerido e o que se perde.</p>
                 </div>
 
                 <div class="imagem">
@@ -91,16 +93,18 @@
         <div class="section">
             <div class="last-page">
                 <div class="texto">
-                    <h1>Baixe agora o aplicativo</h1>
-                    <p>Além de todas essas funções, não podemos nos esquecer de que a água faz parte da composição de nossas
-                        células, tecidos e órgãos. O liquor encontrado entre as meninges, que nos previne de impactos; o
-                        líquido presente nas articulações que evitam o atrito entre os ossos, o líquido amniótico, que protege
-                        o embrião em desenvolvimento, e até as lágrimas que evitam o ressecamento das córneas e realizam
-                        sua limpeza. TODAS ELAS SÃO COMPOSTAS DE ÁGUA. Para nunca se esquecer de tomá-la, baixe nosso aplicativo
-                        e saiba sempre a hora de ficar hidratado™.</p>
-                    <input type="button" class="cta" value="Baixe agora"></input>
-
+                    <h1>BAIXE AGORA O APLICATIVO</h1>
+                    <p>Não podemos nos esquecer de que a água faz parte da composição de nossas células, tecidos e órgãos. Para
+                        nunca se esquecer de beber água, baixe nosso aplicativo e saiba sempre a hora de ficar hidratado™.</p>
+                    <div class="buttons">
+                        <a href=""><img src="images/google-play.png" class="btn"></a>
+                        <a href=""><img src="images/app-store.png" class="btn"></a>
+                    </div>
                 </div>
+
+                <footer>
+                    <p>feito por isabela castedo, joão pedro e raphael ferreira</p>
+                </footer>
             </div>
         </div>
     </div>
