--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <h1 id="first-text">HIDRATADO</h1>
                     <p>Você sabe por que a água é fundamental para nossa saúde?</p>
                     <div class="buttons">
-                        <a href=""><img src="images/google-play.png" class="btn"></a>
-                        <a href=""><img src="images/app-store.png" class="btn"></a>
+                        <a href="https://play.google.com/store"><img src="images/google-play.png" class="btn"></a>
+                        <a href="https://www.apple.com/itunes/charts/free-apps/"><img src="images/app-store.png" class="btn"></a>
                     </div>
                 </div>
 
@@ -43,7 +43,7 @@
         </div>
 
         <div class="section">
-            <div class="grid2">
+            <div class="grid">
                 <div class="imagem">
                     <img src="images/estomago.png">
                 </div>
@@ -74,7 +74,7 @@
         </div>
 
         <div class="section">
-            <div class="grid2">
+            <div class="grid">
                 <div class="imagem">
                     <img src="images/rins.png">
                 </div>
@@ -109,13 +109,13 @@
                     <p>Não podemos nos esquecer de que a água faz parte da composição de nossas células, tecidos e órgãos. Para
                         nunca se esquecer de beber água, baixe nosso aplicativo e saiba sempre a hora de ficar hidratado™.</p>
                     <div class="buttons">
-                        <a href=""><img src="images/google-play.png" class="btn"></a>
-                        <a href=""><img src="images/app-store.png" class="btn"></a>
+                        <a href="https://play.google.com/store"><img src="images/google-play.png" class="btn"></a>
+                        <a href="https://www.apple.com/itunes/charts/free-apps/"><img src="images/app-store.png" class="btn"></a>
                     </div>
                 </div>
 
                 <footer>
-                    <p>feito por isabela castedo, joão pedro e raphael ferreira</p>
+                    <p>feito por isabela castedo, raphael ferreira e joão pedro</p>
                 </footer>
             </div>
         </div>
