--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Hidratado™</title>
     <meta charset="utf-8">
-
+    <link rel="icon" href="images/Icon.png">
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400" rel="stylesheet">
@@ -115,7 +115,11 @@
                 </div>
 
                 <footer>
-                    <p>feito por isabela castedo, raphael ferreira e joão pedro</p>
+                    <p>Orgulhosamente feito por 
+                    	<a href="https://github.com/isabelacastedo" target="_blank">Isabela Castedo</a>,
+                    	 <a href="https://github.com/PHRAPHA" target="_blank">
+                    	 Raphael Ferreira</a> e
+                    	<a href="https://github.com/juanpeter" target="_blank"> João Pedro Israel</a> <a href="#"></a></p>
                 </footer>
             </div>
         </div>
